// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cfn-deploy should successfully create new stack 1`] = `
Object {
  "TemplateBody": "Parameters:
  S3BucketName:
    Description: \\"S3 Bucket name\\"
    Type: String
  DummyParam:
    Description: \\"Dummy parameter\\"
    Type: String

Resources:
  HelloBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub \\"\${AWS::StackName}-\${S3BucketName}\\"
",
}
`;

exports[`cfn-deploy should successfully create new stack 2`] = `
Object {
  "StackName": "new-stack",
}
`;

exports[`cfn-deploy should successfully create new stack 3`] = `
Object {
  "StackName": "new-stack",
}
`;

exports[`cfn-deploy should successfully create new stack 4`] = `
Object {
  "StackName": "new-stack",
}
`;

exports[`cfn-deploy should successfully create new stack 5`] = `
Object {
  "Capabilities": undefined,
  "ChangeSetName": "cfn-deploy",
  "ChangeSetType": "CREATE",
  "Description": "Created with cfn-deploy",
  "Parameters": Array [],
  "StackName": "new-stack",
  "TemplateBody": "Parameters:
  S3BucketName:
    Description: \\"S3 Bucket name\\"
    Type: String
  DummyParam:
    Description: \\"Dummy parameter\\"
    Type: String

Resources:
  HelloBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub \\"\${AWS::StackName}-\${S3BucketName}\\"
",
}
`;

exports[`cfn-deploy should successfully create new stack 6`] = `
Object {
  "ChangeSetName": "fake-changeset-id",
}
`;

exports[`cfn-deploy should successfully create new stack 7`] = `
Object {
  "StackName": "new-stack",
}
`;

exports[`cfn-deploy should successfully create new stack 8`] = `
Object {
  "ChangeSetName": "fake-changeset-id",
}
`;

exports[`cfn-deploy should successfully create new stack 9`] = `
Object {
  "StackName": "new-stack",
}
`;

exports[`cfn-deploy should successfully create new stack 10`] = `
Object {
  "type": "CREATE",
}
`;
